fix: hide stuck balloon tooltips when controller hides

--- a/src/css/player.less
+++ b/src/css/player.less
@@ -134,6 +134,11 @@
       opacity: 0;
       transform: translateY(100%);
     }
+
+    [data-balloon]::before,
+    [data-balloon]::after {
+      display: none !important;
+    }
   }
 
   &.wplayer-show-controller {
